@@ -126,24 +126,24 @@
 	(gtk-clist-clear clist)
 	(setq value '()))
 
-      (gtk-signal-connect add "clicked" add-item)
-      (gtk-signal-connect delete "clicked" delete-item)
-      (gtk-signal-connect edit "clicked" edit-item)
-      (gtk-signal-connect clist "select_row"
+      (g-signal-connect add "clicked" add-item)
+      (g-signal-connect delete "clicked" delete-item)
+      (g-signal-connect edit "clicked" edit-item)
+      (g-signal-connect clist "select_row"
 			  (lambda (w row col)
 			    (declare (unused w col))
 			    (set-selection row)))
-      (gtk-signal-connect clist "unselect_row"
+      (g-signal-connect clist "unselect_row"
 			  (lambda (w row col)
 			    (declare (unused w col))
 			    (when (= row selection)
 			      (set-selection nil))))
-      (gtk-signal-connect clist "button_press_event"
+      (g-signal-connect clist "button_press_event"
 			  (lambda (w ev)
 			    (declare (unused w))
 			    (when (eq (gdk-event-type ev) '2button-press)
 			      (edit-item))))
-      (gtk-signal-connect clist "key_press_event"
+      (g-signal-connect clist "key_press_event"
 			  (lambda (w ev)
 			    (declare (unused w))
 			    (when (string= (gdk-event-string ev) "\r")
