@@ -1,3 +1,9 @@
+2002-04-01  John Harper  <jsh@unfactored.org>
+
+	* widget.jl, widget-test.jl: 
+	* widgets/list.jl, widgets/font.jl, widgets/file.jl,
+	widgets/color.jl: s/gtk-signal-/g-signal-/
+
 2002-02-13  John Harper  <jsh@unfactored.org>
 
 	* stock.jl.gtk, stock.jl.gnome (stock-button): new
